# course3_card_operations

./: .gitignore  README.md  pyproject.toml
src/constants/: constants.py
src/json_dir/: test.json
src/utils/: main.py  utils.py
tests/: test_utils.py
utils/: constants.py  utils.py
