[tool.poetry]
name = "course3-card-operations"
version = "0.1.0"
description = ""
authors = ["Dmitri Sementsov <pluribus.zuhi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

